# quizApp

./: README.md
.github/workflows/: api.yml  build-api.yml  front.yml  lint.yml
api/: Cargo.toml  dockerfile
api/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
api/migrations/2024-05-18-015756_create_quiz/: down.sql  up.sql
api/migrations/2024-08-25-032653_create_user/: up.sql
api/migrations/2024-08-25-032654_create_user/: up.sql
api/migrations/2024-08-25-032700_create_quiz/: up.sql
api/migrations/2024-08-25-032740_create_quiz_results/: up.sql
api/migrations/2024-08-25-032740_create_user_quiz_results/: down.sql  up.sql
api/quiz/: Cargo.toml
api/src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs
api/src/config/: db_connection.rs  env.rs  jwt.rs  mod.rs
api/src/errors/: auth.rs  mod.rs  quiz.rs  quiz_result.rs  user.rs
api/src/middleware/: authentication_token.rs
api/src/models/: mod.rs  quiz.rs  quiz_results.rs  user.rs  user_quiz_results.rs
api/src/routes/: auth.rs  mod.rs  quiz.rs  quiz_results.rs  quiz_routes.rs  user.rs
api/src/services/: auth.rs  quiz.rs  quiz_results.rs  quiz_service.rs  user.rs
api/src/utils/: auth.rs
front/: .gitignore  .prettierrc  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
front/src/: PrivateRoute.tsx  cors.json  firebase.ts  main.tsx
front/src/api/: auth.ts  axiosInstance.ts  quiz.ts  user.ts
front/src/hook/: useWindowWidth.tsx
(+63 files in other folders)
