[package]
name = "quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-identity = "0.6.0"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
] }
diesel = { version = "2.1.0", features = [ "chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = "1.4.0"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.50"
